Fix spacing for previews grid tail

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -120,17 +120,10 @@ my-preview {
 .previews {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
   padding: 0;
   margin: 0;
   margin-bottom: 7rem;
-}
-
-@media(width > 720px) {
-  .previews {
-    justify-content: space-between;
-    gap: 20px;
-  }
 }
 
 ul.previews {
